@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-dependencies</artifactId>
-		<version>1.2.1.BUILD-SNAPSHOT</version>
+		<version>1.3.0.BUILD-SNAPSHOT</version>
 		<relativePath>../spring-boot-dependencies</relativePath>
 	</parent>
 	<artifactId>spring-boot-parent</artifactId>
@@ -19,16 +19,11 @@
 	<properties>
 		<main.basedir>..</main.basedir>
 		<java.version>1.6</java.version>
-		<aether.version>0.9.1.v20140329</aether.version>
-		<json.version>20140107</json.version>
+		<aether.version>1.0.2.v20150114</aether.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<json.version>20140107</json.version>
 		<maven.version>3.1.1</maven.version>
 	</properties>
-	<prerequisites>
-		<maven>3.0.2</maven>
-	</prerequisites>
 	<scm>
 		<url>http://github.com/spring-projects/spring-boot</url>
 		<connection>scm:git:git://github.com/spring-projects/spring-boot.git</connection>
@@ -46,6 +41,16 @@
 		<dependencies>
 			<!-- Additional Dependencies the consumers of spring-boot-dependencies
 				will generally not need -->
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>18.0</version>
+			</dependency>
+			<dependency>
+				<groupId>io.spring.gradle</groupId>
+				<artifactId>dependency-management-plugin</artifactId>
+				<version>0.5.2.RELEASE</version>
+			</dependency>
 			<dependency>
 				<groupId>jline</groupId>
 				<artifactId>jline</artifactId>
@@ -69,7 +74,7 @@
 			<dependency>
 				<groupId>org.apache.maven</groupId>
 				<artifactId>maven-archiver</artifactId>
-				<version>2.5</version>
+				<version>2.6</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.maven</groupId>
@@ -119,7 +124,7 @@
 			<dependency>
 				<groupId>org.codehaus.plexus</groupId>
 				<artifactId>plexus-archiver</artifactId>
-				<version>2.4.4</version>
+				<version>2.8.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.plexus</groupId>
@@ -129,7 +134,7 @@
 			<dependency>
 				<groupId>org.codehaus.plexus</groupId>
 				<artifactId>plexus-utils</artifactId>
-				<version>3.0.17</version>
+				<version>3.0.20</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.aether</groupId>
@@ -185,11 +190,6 @@
 				<groupId>org.gradle</groupId>
 				<artifactId>gradle-plugins</artifactId>
 				<version>${gradle.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.json</groupId>
-				<artifactId>json</artifactId>
-				<version>${json.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.projectlombok</groupId>
@@ -272,6 +272,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
 					<version>3.4</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>animal-sniffer-maven-plugin</artifactId>
+					<version>1.14</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.cargo</groupId>
@@ -419,7 +424,7 @@
 						<configuration>
 							<rules>
 								<requireJavaVersion>
-									<version>(1.7,)</version>
+									<version>[1.8,)</version>
 								</requireJavaVersion>
 								<requireProperty>
 									<property>main.basedir</property>
@@ -465,7 +470,7 @@
 						<java.security.egd>file:/dev/./urandom</java.security.egd>
 						<java.awt.headless>true</java.awt.headless>
 					</systemPropertyVariables>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<argLine>-Xmx1024m</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -486,6 +491,31 @@
 				  </goals>
 				</execution>
 			  </executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>animal-sniffer-maven-plugin</artifactId>
+				<configuration>
+					<signature>
+						<groupId>org.codehaus.mojo.signature</groupId>
+						<artifactId>java16</artifactId>
+						<version>1.0</version>
+					</signature>
+					<annotations>
+						<annotation>org.springframework.lang.UsesJava8</annotation>
+						<annotation>org.springframework.lang.UsesJava7</annotation>
+						<annotation>org.springframework.boot.lang.UsesUnsafeJava</annotation>
+					</annotations>
+				</configuration>
+				<executions>
+					<execution>
+						<id>enforce-java-6</id>
+						<phase>test</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -607,7 +637,7 @@
 								<configuration>
 									<rules>
 										<requireJavaVersion>
-											<version>(1.7,1.8)</version>
+											<version>(1.8,1.9)</version>
 										</requireJavaVersion>
 										<requireReleaseDeps />
 										<requireReleaseVersion />
@@ -636,7 +666,7 @@
 								<configuration>
 									<rules>
 										<requireJavaVersion>
-											<version>(1.7,1.8)</version>
+											<version>(1.8,1.9)</version>
 										</requireJavaVersion>
 										<requireReleaseDeps />
 										<requireReleaseVersion />
